@@ -1,6 +1,6 @@
 package org.cmdbuild.services;
 
-import static org.cmdbuild.spring.SpringIntegrationUtils.applicationContext;
+import static java.util.Arrays.stream;
 
 import java.io.File;
 import java.util.HashMap;
@@ -8,7 +8,6 @@ import java.util.Hashtable;
 import java.util.Map;
 import java.util.StringTokenizer;
 
-import org.cmdbuild.auth.LanguageStore;
 import org.cmdbuild.logger.Log;
 import org.cmdbuild.utils.FileUtils;
 import org.json.JSONException;
@@ -33,64 +32,78 @@ public class TranslationService {
 	}
 
 	public static TranslationService getInstance() {
-		if (instance == null)
+		if (instance == null) {
 			instance = new TranslationService();
+		}
 
 		return instance;
 	}
 
-	public void loadTraslation(String lang) {
-		String path = Settings.getInstance().getRootPath();
-		String file = path + "translations" + File.separator + lang + ".json";
+	public void loadTraslation(final String lang) {
+		final String path = Settings.getInstance().getRootPath();
+		final String file = path + "translations" + File.separator + lang + ".json";
 		try {
-			JSONObject tr = new JSONObject(FileUtils.getContents(file));
+			final JSONObject tr = new JSONObject(FileUtils.getContents(file));
 			map.put(lang, tr);
-		} catch (JSONException ex) {
+		} catch (final JSONException ex) {
 			Log.CMDBUILD.error("Can't read translation", ex);
 			map.put(lang, new JSONObject());
 		}
 	}
 
 	public Map<String, String> getTranslationList() {
-		String path = Settings.getInstance().getRootPath();
-		File dir = new File(path + "translations");
+		final String path = Settings.getInstance().getRootPath();
+		final File dir = new File(path + "translations");
 
-		File[] files = dir.listFiles();
-		Map<String, String> list = new Hashtable<String, String>();
-		for (int i = 0; i < files.length; i++) {
-			File f = files[i];
-			if (f.isFile()) {
-				int pos = f.getName().indexOf(".json");
-				String lang = f.getName().substring(0, pos);
-				String description = getTranslation(lang, "description");
-				list.put(lang, description);
-			}
-		}
+		final Map<String, String> list = new Hashtable<String, String>();
+		stream(dir.listFiles()) //
+				.filter(input -> {
+					final boolean isFile = input.isFile();
+					if (!isFile) {
+						Log.CMDBUILD.warn("'{}' is not a file", input);
+					}
+					return isFile;
+				}) //
+				.filter(input -> {
+					final boolean maybeJson = input.getName().endsWith(".json");
+					if (!maybeJson) {
+						Log.CMDBUILD.warn("'{}' misses 'json' extension", input);
+					}
+					return maybeJson;
+				}) //
+				.forEach(input -> {
+					final int pos = input.getName().indexOf(".json");
+					final String lang = input.getName().substring(0, pos);
+					final String description = getTranslation(lang, "description");
+					list.put(lang, description);
+				});
 		return list;
 	}
 
-	public JSONObject getTranslationObject(String lang) {
-		if (!map.containsKey(lang))
+	public JSONObject getTranslationObject(final String lang) {
+		if (!map.containsKey(lang)) {
 			loadTraslation(lang);
+		}
 		return map.get(lang);
 	}
 
-	public String getTranslation(String lang, String key) {
+	public String getTranslation(final String lang, final String key) {
 		try {
 			JSONObject json = getTranslationObject(lang);
-			StringTokenizer tokenizer = new StringTokenizer(key, ".");
+			final StringTokenizer tokenizer = new StringTokenizer(key, ".");
 			while (tokenizer.hasMoreTokens()) {
-				String token = tokenizer.nextToken();
+				final String token = tokenizer.nextToken();
 				if (tokenizer.hasMoreTokens()) {
 					json = json.getJSONObject(token);
 				} else {
 					return json.getString(token);
 				}
 			}
-		} catch (Exception e) {
-			Log.CMDBUILD.debug("Error translating: " + key, e);
+		} catch (final Exception e) {
+			Log.CMDBUILD.error("Error translating: " + key, e);
 		}
 		// translation not found
 		return "[" + lang + "." + key + "]";
 	}
+
 }
